row gap and grid template colummns at fifthsection in macbook resolution fixed

--- a/css/styled.scss
+++ b/css/styled.scss
@@ -1047,6 +1047,13 @@
 					}
 
 				}
+				.FifthSection{
+					.FifthSection-Card-container{
+						grid-template-columns: repeat(2, 2fr);
+						row-gap: 50px;
+
+					}
+				}
 			}
 
 
